fix spacing for calendar event tooltip

--- a/src/resources/postcss/views/month/_calendar-event.pcss
+++ b/src/resources/postcss/views/month/_calendar-event.pcss
@@ -88,7 +88,7 @@
 	/* .tribe-events-calendar-month__calendar-event-title-link {} */
 
 	.tribe-events-calendar-month__calendar-event-tooltip-featured-image-wrapper {
-		margin-bottom: var(--spacer-3);
+		margin-bottom: var(--spacer-2);
 	}
 
 	.tribe-events-calendar-month__calendar-event-tooltip-featured-image {
@@ -96,6 +96,6 @@
 	}
 
 	.tribe-events-calendar-month__calendar-event-tooltip-cta {
-		margin-top: var(--spacer-3);
+		margin-top: var(--spacer-1);
 	}
 }
